使用jasperreports组件作为报表生成组件

--- a/TODO
+++ b/TODO
@@ -1,3 +1,13 @@
+jasperreports
+
+process
+clean
+javac
+compile
+fill
+pdf
+
+=============================================
 ModelDaoHibernate<CommonDaoHibernate<HibernateDaoSupport, CommonDao
 
 
